--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "sentry/sentry-laravel": "^2.9"
+        "sentry/sentry-laravel": "^2.9",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
